--- a/test/fixtures/stacks/catalog/usecase/serverless.yaml
+++ b/test/fixtures/stacks/catalog/usecase/serverless.yaml
@@ -2,7 +2,7 @@ components:
   terraform:
     aurora-postgres/serverless:
       metadata:
-        component: aurora-postgres
+        component: target
       vars:
         enabled: true
         name: db
