--- a/test/fixtures/stacks/catalog/usecase/disabled.yaml
+++ b/test/fixtures/stacks/catalog/usecase/disabled.yaml
@@ -1,10 +1,10 @@
 components:
   terraform:
-    aurora-postgres/basic:
+    aurora-postgres/disabled:
       metadata:
         component: target
       vars:
-        enabled: true
+        enabled: false
         name: db
         tags:
           Team: sre
