chore: Update README.yaml with AI

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ aws-assumed-role/
 .direnv
 .envrc
 .cache
+.atmos
 
 # Compiled and auto-generated files
 # Note that the leading "**/" appears necessary for Docker even if not for Git
